@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - Don't require feature(state), might get things working in Perl < 5.10
 
 0.002     2015-11-05 23:08:14+11:00 Australia/Melbourne
  - Skip tests if Test::Consul can't start a consul instance
